# plotlet

./: .gitattributes  .gitignore  CLAUDE.md  NOTICE.md  README.md  pyproject.toml
.github/workflows/: test.yml
cookbook/: README.md  _gallery.py  karyotype.py
cookbook/annotated_heatmap/: annotated_heatmap.py
cookbook/circle/: demo.py  hg38_chord.py
cookbook/circle/src/: coordinate.py  layout.py
cookbook/dendrogram_heatmap/: dendrogram_heatmap.py
cookbook/genomic_tracks/: genomic_tracks.py  track_layout.py
cookbook/heatmaps/: heatmap.py  heatmap_list.py
cookbook/lollipop/: lollipop.py
cookbook/numeric_bar/: numeric_bar.py
cookbook/omics_heatmap/: omics_heatmap.py
docs/: AI_ATTRS.md  API.md  ARCHITECTURE.md  COORDINATES.md  EXTENDING.md  IR.md  PHILOSOPHY.md  SUBPLOTS.md  THEMES.md
examples/: README.md  alluvial.py  annotated_heatmap.py  bland_altman.py  boxenplot.py  boxplot.py  bubble_grid.py  bump.py  calendar_heatmap.py  calibration_plot.py  cleveland_dot.py  confusion_matrix.py  contour.py  crossbar.py  density_1d.py  diverging_bar.py  dumbbell.py  ecdf.py  errorbar.py  eventplot.py  forest_plot.py  freqpoly.py  funnel_plot.py  gene_arrow.py  grouped_bar.py  hexbin.py  horizon.py  horizontal_bar.py  jointplot.py  kde_2d.py  km_curve.py  loess.py  lollipop.py  ma_plot.py  manhattan.py  mosaic.py  numeric_bar.py  pair_plot.py  parallel_coordinates.py  pca_biplot.py  (+25 more)
notebooks/: 00_introduction.ipynb  01_basics.ipynb  01_basics_old.ipynb  02_subplots.ipynb  02_subplots_debug.ipynb  03_layout_diagram.ipynb  04_serialize.ipynb  05_registry.ipynb  06_colors.ipynb
skills/: developers.md  users.md
src/plotlet/: __init__.py  _artist_impl.py  _attachments.py  _chrome.py  _chrome_circular.py  _chrome_linear.py  _cm_data.py  _coord_registry.py  _ir.py  _ir_resolved.py  _journal.py  _json_layer.py  _layout_engine.py  _png.py  _regions.py  _render_nodes.py  _spec.py  _splits.py  _tree.py  artists.py  builtin_artists.py  chart.py  cluster.py  colormaps.py  colors.py  coordinates.py  core.py  data.py  datasets.py  dendrogram.py  facet.py  figure_ir.py  font.py  formatters.py  journal.py  layout.py  layout_diagram.py  legend.py  lint.py  registry.py  (+6 more)
src/plotlet/artists/: __init__.py  _marching.py  _shared.py  annotation_strip.py  area.py  bar.py  boxplot.py  chord_links.py  chord_ribbon.py  contour.py  dendrogram.py  density_1d.py  ecdf.py  errorbar.py  fill_between.py  fills.py  freqpoly.py  heatmap.py  hexbin.py  hist.py  hist2d.py  imshow.py  kde_2d.py  line.py  numeric_bar.py  pointplot.py  qq.py  references.py  regression.py  ridge.py  rug.py  scatter.py  shapes.py  strip.py  swarm.py  text.py  violin.py
src/plotlet/draw/: __init__.py  _css_colors.py  _png.py  _raster.py  colormaps.py  colors.py  font.py  format.py  linestyles.py  primitives.py
src/plotlet/extensions/: __init__.py  _gallery.py  alluvial.py  annotation_strip.py  boxenplot.py  bubble_grid.py  calendar_heatmap.py  chord_links.py  chord_ribbon.py  cleveland_dot.py  confusion_matrix.py  curved_tree.py  diverging_bar.py  ecdf.py  errorbar.py  eventplot.py  feature_strip.py  freqpoly.py  funnel_plot.py  gene_arrow.py  grouped_bar.py  horizon.py  horizontal_bar.py  jointplot.py  kde_2d.py  km_curve.py  labels_strip.py  loess.py  lollipop.py  ma_plot.py  manhattan.py  mosaic.py  numeric_bar.py  pair_plot.py  parallel_coordinates.py  pca_biplot.py  percentile_band.py  qq_plot.py  raincloud.py  regression.py  (+12 more)
src/plotlet/recipes/: __init__.py  _gallery.py  alluvial.py  annotated_heatmap.py  bland_altman.py  boxenplot.py  boxplot.py  bubble_grid.py  bump.py  calendar_heatmap.py  calibration_plot.py  cleveland_dot.py  confusion_matrix.py  contour.py  crossbar.py  density_1d.py  diverging_bar.py  dumbbell.py  ecdf.py  errorbar.py  eventplot.py  forest_plot.py  freqpoly.py  funnel_plot.py  gene_arrow.py  grouped_bar.py  hexbin.py  horizon.py  horizontal_bar.py  jointplot.py  kde_2d.py  km_curve.py  loess.py  lollipop.py  ma_plot.py  manhattan.py  mosaic.py  numeric_bar.py  pair_plot.py  parallel_coordinates.py  (+26 more)
src/plotlet/record/: __init__.py  chart.py  facet.py  figure_ir.py  journal.py  legend.py
src/plotlet/render/: __init__.py  _attachments.py  _chrome.py  _chrome_bands.py  _chrome_circular.py  _chrome_emit.py  _chrome_policy.py  _chrome_visibility.py  _coord_circular.py  (+13 more)
tests/: _chart_helpers.py  _curved_tree.py  _runner.py  conftest.py  gen_gallery.py  lint_report.py  test_aes.py  test_annotation_strip.py  test_attachments.py  test_chart.py  test_chart_annotation_strip.py  test_chart_axis.py  test_chart_bar.py  test_chart_boxplot.py  test_chart_chord_links.py  test_chart_chord_ribbon.py  test_chart_contour.py  test_chart_dendrogram.py  test_chart_density_1d.py  test_chart_ecdf.py  test_chart_errorbar.py  test_chart_facets.py  test_chart_fills.py  test_chart_freqpoly.py  test_chart_heatmap.py  test_chart_hexbin.py  test_chart_hist.py  test_chart_hist2d.py  test_chart_imshow.py  test_chart_kde_2d.py  test_chart_labels.py  test_chart_line.py  test_chart_numeric_bar.py  test_chart_pointplot.py  test_chart_qq.py  test_chart_references.py  test_chart_regression.py  test_chart_ridge.py  test_chart_rug.py  test_chart_scatter.py  (+37 more)
(+3 files in other folders)
