[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plotlet"
version = "0.6.0"
description = "Python library for reproducible, multi-panel scientific figures, with byte-identical output across machines and an extension API for custom plot types."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "gitbamboo42" },
]
keywords = [
    "plot",
    "svg",
    "scientific",
    "visualization",
    "jupyter",
    "reproducible",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
  "fonttools>=4.0",
  "scipy>=1.10",
  "resvg_py>=0.3",
]

[project.optional-dependencies]
dev = [
  "jupyter",
  "nbconvert",
]
test = [
  "pytest>=7",
  "pandas",
  "statsmodels>=0.13",
]
loess = [
  "statsmodels>=0.13",
]
pdf = [
  "cairosvg",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[project.urls]
Homepage = "https://github.com/gitbamboo42/plotlet"
Repository = "https://github.com/gitbamboo42/plotlet"
Issues = "https://github.com/gitbamboo42/plotlet/issues"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
# draw/fonts/*.txt are the font licenses — DejaVu (Bitstream Vera–derived)
# and Arimo (SIL OFL 1.1) both require the license text to accompany
# redistribution, so they must ship in the wheel next to the TTFs.
plotlet = ["spec.json", "themes/*.json", "draw/fonts/*.ttf", "draw/fonts/*.txt", "_datasets/*.csv"]
